# MecanOdei

./: README.md  pyproject.toml  requirements.txt
components/: ref_text.py
docs/: PLANTILLA I.E - tiny.docx  PLANTILLA I.E.docx  PROCEDIMIENTOS DATASET.xlsx  PROCEDIMIENTOS.xlsx  PRUEBA PARA SERGIO.docx  dummy.txt  examen1.txt  examen2.txt  examen3.txt  examen4.txt  prueba plantilla.txt  test1.txt  test3.txt  tests.txt  tests2.txt
docs/simulacion_examen/: plantilla.txt
docs/simulacion_examen/variables/: saludo.txt
mecanodei/: _main.py  config.py  config.toml  main.py  requirements.txt
mecanodei/components/: analytics.py  app_state.py  custom_button.py  custom_chart.py  pointer.py  ref_text.py  simple_label.py  state.py  stats.py
mecanodei/db/: db.py
mecanodei/models/: char_iterator.py  file_manager.py  pointer.py  stat_manager.py  state.py  text_manager.py  timer.py  type_text.py
mecanodei/styles/: colors.py  styles.py
mecanodei/utils/: config.py  log_manager.py  logger.py  pointer.py  state.py  text.py  time.py
mecanodei/views/: analytics.py  load_screen.py  main_view.py  transcripcion.py  type_screen.py
src/mecanodei/: main.py
