[tool.poetry]
name = "mecanodei"
version = "0.1.0"
description = ""
authors = ["sertemo <tejedor.moreno@gmail.com>"]
readme = "README.md"
packages = [{include = "mecanodei", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.20.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
