[tool.poetry]
name = "mecanodei"
version = "0.1.0"
description = ""
authors = ["sertemo <tejedor.moreno@gmail.com>"]
readme = "README.md"
packages = [{include = "mecanodei"}]

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.20.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
toml = "^0.10.2"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
mypy_path = "mecanodei"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
